// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboard converter > convert dashboard > should convert dashboard with export temp filter context 1`] = `
{
  "analyticalDashboard": {
    "content": {
      "filterContext": "/tempFilterContext",
      "layout": undefined,
      "widgets": [],
    },
    "meta": {
      "identifier": "dashboardWithTempFilterContext",
      "locked": undefined,
      "summary": "",
      "tags": undefined,
      "title": "dashboardWithTempFilterContext",
      "unlisted": 1,
      "uri": "/gdc/md/obj/dashboardWithTempFilterContext",
    },
  },
}
`;

exports[`dashboard converter > convert dashboard > should convert dashboard with extended date filters config 1`] = `
{
  "analyticalDashboard": {
    "content": {
      "dateFilterConfig": {
        "addPresets": {
          "relativePresets": [
            {
              "from": -6,
              "granularity": "GDC.time.month",
              "localIdentifier": "plus_minus_6_months",
              "name": "+/- 6 months",
              "to": 6,
              "visible": true,
            },
          ],
        },
        "filterName": "Extended filter",
        "hideGranularities": [
          "GDC.time.quarter",
        ],
        "mode": "readonly",
      },
      "filterContext": undefined,
      "layout": undefined,
      "widgets": [],
    },
    "meta": {
      "identifier": "emptyDashboard",
      "locked": undefined,
      "summary": "",
      "tags": undefined,
      "title": "emptyDashboard",
      "unlisted": 1,
      "uri": "/gdc/md/obj/emptyDashboard",
    },
  },
}
`;

exports[`dashboard converter > convert dashboard > should convert dashboard with filter context 1`] = `
{
  "analyticalDashboard": {
    "content": {
      "filterContext": "/gdc/md/obj/filterContext",
      "layout": undefined,
      "widgets": [],
    },
    "meta": {
      "identifier": "dashboardWithFilterContext",
      "locked": undefined,
      "summary": "",
      "tags": undefined,
      "title": "dashboardWithFilterContext",
      "unlisted": 1,
      "uri": "/gdc/md/obj/dashboardWithFilterContext",
    },
  },
}
`;

exports[`dashboard converter > convert dashboard > should convert dashboard with layout 1`] = `
{
  "analyticalDashboard": {
    "content": {
      "filterContext": undefined,
      "layout": {
        "fluidLayout": {
          "rows": [
            {
              "columns": [
                {
                  "content": {
                    "widget": {
                      "qualifier": {
                        "uri": "/gdc/md/obj/widgetHeadline",
                      },
                    },
                  },
                  "size": {
                    "xl": {
                      "width": 12,
                    },
                  },
                },
                {
                  "content": {
                    "widget": {
                      "qualifier": {
                        "uri": "/gdc/md/obj/widgetKpi",
                      },
                    },
                  },
                  "size": {
                    "xl": {
                      "width": 6,
                    },
                  },
                },
                {
                  "content": {
                    "widget": {
                      "qualifier": {
                        "uri": "/gdc/md/obj/widgetBarChart",
                      },
                    },
                  },
                  "size": {
                    "xl": {
                      "width": 2,
                    },
                  },
                },
              ],
              "header": {
                "title": "Section 1",
              },
            },
            {
              "columns": [],
              "header": {
                "description": "Section 2 description",
              },
            },
          ],
        },
      },
      "widgets": [
        "/gdc/md/obj/widgetHeadline",
        "/gdc/md/obj/widgetKpi",
        "/gdc/md/obj/widgetBarChart",
      ],
    },
    "meta": {
      "identifier": "emptyDashboard",
      "locked": undefined,
      "summary": "",
      "tags": undefined,
      "title": "emptyDashboard",
      "unlisted": 1,
      "uri": "/gdc/md/obj/emptyDashboard",
    },
  },
}
`;

exports[`dashboard converter > convert dashboard > should convert dashboard with layout with custom gridHeight 1`] = `
{
  "analyticalDashboard": {
    "content": {
      "filterContext": undefined,
      "layout": {
        "fluidLayout": {
          "rows": [
            {
              "columns": [
                {
                  "content": {
                    "widget": {
                      "qualifier": {
                        "uri": "/gdc/md/obj/widgetHeadline",
                      },
                    },
                  },
                  "size": {
                    "xl": {
                      "height": 10,
                      "width": 12,
                    },
                  },
                },
                {
                  "content": {
                    "widget": {
                      "qualifier": {
                        "uri": "/gdc/md/obj/widgetKpi",
                      },
                    },
                  },
                  "size": {
                    "xl": {
                      "height": 6,
                      "width": 6,
                    },
                  },
                },
              ],
              "header": {
                "title": "Section 1",
              },
            },
            {
              "columns": [
                {
                  "content": {
                    "widget": {
                      "qualifier": {
                        "uri": "/gdc/md/obj/widgetBarChart",
                      },
                    },
                  },
                  "size": {
                    "xl": {
                      "height": 30,
                      "width": 2,
                    },
                  },
                },
              ],
              "header": {
                "description": "Section 2 description",
              },
            },
          ],
        },
      },
      "widgets": [
        "/gdc/md/obj/widgetHeadline",
        "/gdc/md/obj/widgetKpi",
        "/gdc/md/obj/widgetBarChart",
      ],
    },
    "meta": {
      "identifier": "emptyDashboard",
      "locked": undefined,
      "summary": "",
      "tags": undefined,
      "title": "emptyDashboard",
      "unlisted": 1,
      "uri": "/gdc/md/obj/emptyDashboard",
    },
  },
}
`;

exports[`dashboard converter > convert dashboard > should convert dashboard with layout with empty row headers 1`] = `
{
  "analyticalDashboard": {
    "content": {
      "filterContext": undefined,
      "layout": {
        "fluidLayout": {
          "rows": [
            {
              "columns": [
                {
                  "content": {
                    "widget": {
                      "qualifier": {
                        "uri": "/gdc/md/obj/widgetHeadline",
                      },
                    },
                  },
                  "size": {
                    "xl": {
                      "width": 12,
                    },
                  },
                },
                {
                  "content": {
                    "widget": {
                      "qualifier": {
                        "uri": "/gdc/md/obj/widgetKpi",
                      },
                    },
                  },
                  "size": {
                    "xl": {
                      "width": 6,
                    },
                  },
                },
                {
                  "content": {
                    "widget": {
                      "qualifier": {
                        "uri": "/gdc/md/obj/widgetBarChart",
                      },
                    },
                  },
                  "size": {
                    "xl": {
                      "width": 2,
                    },
                  },
                },
              ],
            },
            {
              "columns": [],
            },
          ],
        },
      },
      "widgets": [
        "/gdc/md/obj/widgetHeadline",
        "/gdc/md/obj/widgetKpi",
        "/gdc/md/obj/widgetBarChart",
      ],
    },
    "meta": {
      "identifier": "emptyDashboard",
      "locked": undefined,
      "summary": "",
      "tags": undefined,
      "title": "emptyDashboard",
      "unlisted": 1,
      "uri": "/gdc/md/obj/emptyDashboard",
    },
  },
}
`;

exports[`dashboard converter > convert dashboard > should convert empty dashboard 1`] = `
{
  "analyticalDashboard": {
    "content": {
      "filterContext": undefined,
      "layout": undefined,
      "widgets": [],
    },
    "meta": {
      "identifier": "emptyDashboard",
      "locked": undefined,
      "summary": "",
      "tags": undefined,
      "title": "emptyDashboard",
      "unlisted": 1,
      "uri": "/gdc/md/obj/emptyDashboard",
    },
  },
}
`;

exports[`dashboard converter > convert drill > should convert drill to dashboard with drill from attribute 1`] = `
{
  "drillToDashboard": {
    "from": {
      "drillFromAttribute": {
        "localIdentifier": "attributeLocalIdentifier",
      },
    },
    "target": "in-place",
    "toDashboard": "someDashboardId",
  },
}
`;

exports[`dashboard converter > convert drill > should convert drill to dashboard with drill from measure 1`] = `
{
  "drillToDashboard": {
    "from": {
      "drillFromMeasure": {
        "localIdentifier": "measureLocalIdentifier",
      },
    },
    "target": "in-place",
    "toDashboard": "someDashboardId",
  },
}
`;

exports[`dashboard converter > convert filter context > should convert filter context 1`] = `
{
  "filterContext": {
    "content": {
      "filters": [
        {
          "attributeFilter": {
            "attributeElements": [
              "/gdc/md/attrId",
            ],
            "displayForm": "/gdc/md/displayForm",
            "filterElementsBy": [],
            "localIdentifier": undefined,
            "negativeSelection": false,
            "title": undefined,
          },
        },
        {
          "attributeFilter": {
            "attributeElements": [
              "/gdc/md/attrId",
            ],
            "displayForm": "/gdc/md/displayForm",
            "filterElementsBy": [],
            "localIdentifier": undefined,
            "negativeSelection": false,
            "selectionMode": "single",
            "title": undefined,
          },
        },
        {
          "dateFilter": {
            "attribute": "/attrId",
            "dataSet": "/dataSet",
            "from": "-12",
            "granularity": "GDC.time.month",
            "to": "-2",
            "type": "relative",
          },
        },
      ],
    },
    "meta": {
      "identifier": "filterContext",
      "summary": "",
      "title": "filterContext",
      "uri": "/gdc/md/obj/filterContext",
    },
  },
}
`;

exports[`dashboard converter > convert filter context > should convert temp filter context 1`] = `
{
  "tempFilterContext": {
    "created": "2020-05-05 00:00:00",
    "filters": [
      {
        "attributeFilter": {
          "attributeElements": [
            "/gdc/md/attrId",
          ],
          "displayForm": "/gdc/md/displayForm",
          "filterElementsBy": [],
          "localIdentifier": undefined,
          "negativeSelection": false,
          "title": undefined,
        },
      },
      {
        "dateFilter": {
          "attribute": "/attrId",
          "dataSet": "/dataSet",
          "from": "-12",
          "granularity": "GDC.time.month",
          "to": "-2",
          "type": "relative",
        },
      },
    ],
    "uri": "/tempFilterContext",
  },
}
`;

exports[`dashboard converter > convert widget > should convert kpi widget 1`] = `
{
  "kpi": {
    "content": {
      "comparisonDirection": "growIsGood",
      "comparisonType": "lastYear",
      "dateDataSet": undefined,
      "drillTo": undefined,
      "ignoreDashboardFilters": [],
      "metric": "/measure",
    },
    "meta": {
      "identifier": "widgetKpi",
      "summary": "",
      "title": "widgetKpi",
      "uri": "/gdc/md/obj/widgetKpi",
    },
  },
}
`;

exports[`dashboard converter > convert widget > should convert kpi widget with drilling 1`] = `
{
  "kpi": {
    "content": {
      "comparisonDirection": "growIsGood",
      "comparisonType": "lastYear",
      "dateDataSet": undefined,
      "drillTo": {
        "projectDashboard": "oldDashboardUri",
        "projectDashboardTab": "tab1",
      },
      "ignoreDashboardFilters": [],
      "metric": "/measure",
    },
    "meta": {
      "identifier": "widgetKpi",
      "summary": "",
      "title": "widgetKpi",
      "uri": "/gdc/md/obj/widgetKpi",
    },
  },
}
`;

exports[`dashboard converter > convert widget > should convert visualization widget 1`] = `
{
  "visualizationWidget": {
    "content": {
      "dateDataSet": undefined,
      "drills": [],
      "ignoreDashboardFilters": [],
      "visualization": "/headline",
    },
    "meta": {
      "identifier": "widgetHeadline",
      "summary": "",
      "title": "widgetHeadline",
      "uri": "/gdc/md/obj/widgetHeadline",
    },
  },
}
`;
